tests/toy/neg/001090_mutation.toylang
program a = { if a then sleep var sleep; } .
